--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 
 MONGO_DB_URL=mongodb://172.31.210.8:27017
+
+MONGO_DB_NAME=terrorism_db
+MONGO_DB_COLLECTION=attacks
+MONGO_DB_COLLECTION_TEST=attacks_test
+
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=pwd1234567890
