--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ MONGO_DB_COLLECTION_TEST=attacks_test
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=pwd1234567890
+
+ELASTIC_INDEX_NAME=attacks
